tests/spec/emit/snapshots/recover_block_with_match.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn may_panic() -> int { 42 }
  
  fn test() -> int {
    let result = recover { may_panic() };
    match result {
      Ok(x) => x,
      Err(pv) => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mayPanic() int {
	return 42
}

func test() int {
	result := lisette.RecoverBlock(func() int {
		return mayPanic()
	})
	if result.Tag == lisette.ResultOk {
		return result.OkVal
	}
	return 0
}
