tests/spec/emit/snapshots/recover_block_with_panic_never_type.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn panicky() -> int {
    let arr: Slice<int> = [];
    arr[0]
  }
  
  fn test() {
    let result = recover { panicky() };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func panicky() int {
	arr := []int{}
	return arr[0]
}

func test() {
	recoverResult := lisette.RecoverBlock(func() int {
		return panicky()
	})
	_ = recoverResult
}
