tests/spec/emit/snapshots/recover_block_with_statements.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() {
    let result = recover {
      let x = 1;
      let y = 2;
      x + y
    };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	recoverResult := lisette.RecoverBlock(func() int {
		x := 1
		y := 2
		return x + y
	})
	_ = recoverResult
}
