tests/spec/emit/snapshots/recursive_enum_constructor_passed_to_higher_order_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  enum IntList {
    Empty,
    Cons(int, IntList),
  }
  
  fn apply(f: fn(int, IntList) -> IntList, x: int, xs: IntList) -> IntList {
    f(x, xs)
  }
  
  fn build() -> IntList {
    apply(IntList.Cons, 1, apply(IntList.Cons, 2, IntList.Empty))
  }
---
package main

func MakeIntListEmpty() IntList {
	return IntList{Tag: IntListEmpty}
}

func MakeIntListCons(arg0 int, arg1 IntList) IntList {
	return IntList{Tag: IntListCons, Cons0: arg0, Cons1: &arg1}
}

type IntListTag uint8

const (
	IntListEmpty IntListTag = iota
	IntListCons
)

type IntList struct {
	Tag   IntListTag
	Cons0 int
	Cons1 *IntList
}

func apply(f func(int, IntList) IntList, x int, xs IntList) IntList {
	return f(x, xs)
}

func build() IntList {
	return apply(MakeIntListCons, 1, apply(MakeIntListCons, 2, MakeIntListEmpty()))
}
