tests/spec/emit/snapshots/recursive_enum_indirect_through_struct.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Tree {
    Leaf(int),
    Node(Pair),
  }
  
  struct Pair {
    l: Tree,
    r: Tree,
  }
  
  fn sum(t: Tree) -> int {
    match t {
      Tree.Leaf(n) => n,
      Tree.Node(p) => sum(p.l) + sum(p.r),
    }
  }
  
  fn test() -> Tree {
    Tree.Node(Pair { l: Tree.Leaf(1), r: Tree.Leaf(2) })
  }
---
package main

func MakeTreeLeaf(arg0 int) Tree {
	return Tree{Tag: TreeLeaf, Leaf: arg0}
}

func MakeTreeNode(arg0 Pair) Tree {
	return Tree{Tag: TreeNode, Node: &arg0}
}

type TreeTag uint8

const (
	TreeLeaf TreeTag = iota
	TreeNode
)

type Tree struct {
	Tag  TreeTag
	Leaf int
	Node *Pair
}

type Pair struct {
	l Tree
	r Tree
}

func sum(t Tree) int {
	if t.Tag == TreeLeaf {
		return t.Leaf
	}
	p := *t.Node
	return sum(p.l) + sum(p.r)
}

func test() Tree {
	return MakeTreeNode(Pair{
		l: MakeTreeLeaf(1),
		r: MakeTreeLeaf(2),
	})
}
