tests/spec/emit/snapshots/recursive_enum_ref_argument_no_double_pointer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum List {
    Cons(int, Ref<List>),
    Nil,
  }
  
  fn test() -> List {
    let nil = List.Nil;
    List.Cons(3, &nil)
  }
---
package main

func MakeListCons(arg0 int, arg1 *List) List {
	return List{Tag: ListCons, Cons0: arg0, Cons1: arg1}
}

func MakeListNil() List {
	return List{Tag: ListNil}
}

type ListTag uint8

const (
	ListCons ListTag = iota
	ListNil
)

type List struct {
	Tag   ListTag
	Cons0 int
	Cons1 *List
}

func test() List {
	nil_ := MakeListNil()
	return MakeListCons(3, &nil_)
}
